--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"@wordpress/scripts": "^24.2.0",
 		"@wordpress/stylelint-config": "^21.1.0",
 		"eslint-config-prettier": "^8.3.0"
+	},
+	"dependencies": {
+		"react-rater": "^6.0.5"
 	}
 }
